[gd_scene load_steps=3 format=3 uid="uid://c5dlgbox01"]

[ext_resource type="Script" path="res://scripts/ui/dialogue_box.gd" id="1_dlgbox"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.08, 0.12, 0.92)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.35, 0.35, 0.5, 0.8)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
content_margin_left = 4.0
content_margin_top = 3.0
content_margin_right = 4.0
content_margin_bottom = 3.0

[node name="DialogueBoxLayer" type="CanvasLayer"]
layer = 10
process_mode = 3

[node name="DialogueBoxControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_dlgbox")

[node name="DialogueBox" type="PanelContainer" parent="DialogueBoxControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -44.0
offset_right = -4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="DialogueBoxControl/DialogueBox"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 1

[node name="HBoxContainer" type="HBoxContainer" parent="DialogueBoxControl/DialogueBox/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Portrait" type="TextureRect" parent="DialogueBoxControl/DialogueBox/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(24, 24)
modulate = Color(0.8, 0.8, 0.8, 1)
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueBoxControl/DialogueBox/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="NameLabel" type="Label" parent="DialogueBoxControl/DialogueBox/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 8
text = "Nombre"

[node name="TextLabel" type="RichTextLabel" parent="DialogueBoxControl/DialogueBox/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 8
text = "Texto de dialogo aqui..."
fit_content = true
scroll_active = false
visible_characters = 0

[node name="ContinueArrow" type="Label" parent="DialogueBoxControl/DialogueBox"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -10.0
offset_right = -2.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.8)
theme_override_font_sizes/font_size = 8
text = "â–¼"
horizontal_alignment = 2
vertical_alignment = 2
